text-alignmnet fix

--- a/express/fullstack-webpage/client/source/styles/Footer.sass
+++ b/express/fullstack-webpage/client/source/styles/Footer.sass
@@ -211,4 +211,32 @@
                         a
                             font-size: 16px
                             letter-spacing: 0.9px
-                            width: 95px;
+                            width: 95px
+
+@media only screen and (max-width: 270px)
+    .footer-background
+        .footer-container
+            width: 200px
+            .form-main
+                margin: 50px auto 20px auto
+                .form-side
+                    flex-direction: column
+                    input
+                        width: 100%
+            .footer-items
+                margin: 20px auto 0px auto
+                flex-direction: column
+                .parts,
+                .bottom
+                    flex-direction: column
+                    justify-content: center
+                    gap: 0px
+                    align-items: center
+                    .logo
+                        text-align: center
+                        i
+                            font-size: 28px
+                        a
+                            font-size: 16px
+                            letter-spacing: 0.9px
+                            width: 110px
